<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".second_activity"
    android:baselineAligned="false"
    android:background="@drawable/background2"
    >

    <LinearLayout
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="110dp"
        android:layout_height="match_parent"
        android:id="@+id/hummingbird"
        >
        <ListView
            android:id="@+id/listviewid"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </ListView>

    </LinearLayout>

    <LinearLayout
        android:layout_toRightOf="@+id/hummingbird"
        android:layout_toEndOf="@id/hummingbird"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="match_parent"
        >
    <TextView
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewid"
        android:textSize="25sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_marginTop="200dp"
        android:id="@+id/textView2"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ccc" />

    <ImageButton
        android:background="@drawable/custom_button"
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/microphone"
        android:contentDescription="@string/description"
        />

    <Button
        android:background="@drawable/custom_button"
        android:layout_marginTop="50dp"
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/ddd"
        />
    </LinearLayout>
</RelativeLayout>